editors/tree-sitter-lira/grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $._declaration,
      $._statement,
    ),

    // =========================================================================
    // DECLARATIONS
    // =========================================================================

    function_declaration: $ => seq(
      optional($.visibility),
      optional('async'),
      'fn',
      field('name', $.identifier),
      optional($.type_parameters),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      optional($.where_clause),
      choice(
        field('body', $.block),
        seq('=>', field('body', $._expression)),
      ),
    ),

    parameters: $ => seq(
      '(',
      optional(seq(
        commaSep1($.parameter),
        optional(','),
      )),
      ')',
    ),

    parameter: $ => choice(
      // self parameter (method receiver)
      seq(optional('mut'), 'self'),
      // Regular parameter: name, optional type, optional default
      seq(
        optional('mut'),
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('default', $._expression))),
      ),
      // Type-only parameter (for function types)
      seq(':', field('type', $._type)),
    ),

    // Struct declaration
    trait_declaration: $ => seq(
      optional($.visibility),
      'trait',
      field('name', $.type_identifier),
      optional($.type_parameters),
      optional(seq(':', commaSep1($.trait_bound))),
      optional($.where_clause),
      $.trait_body,
    ),

    trait_body: $ => seq(
      '{',
      repeat($.trait_method),
      '}',
    ),

    trait_method: $ => seq(
      optional($.visibility),
      optional('async'),
      'fn',
      field('name', $.identifier),
      optional($.type_parameters),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      optional($.where_clause),
      optional(choice(
        field('body', $.block),
        seq('=>', field('body', $._expression)),
      )),
    ),

    // Interface declaration
    _statement: $ => choice(
      $._expression_statement,
      $.variable_declaration,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.while_statement,
      $.for_statement,
      $.loop_statement,
      $.try_statement,
      $.spawn_statement,
      $.select_statement,
      $.block,
    ),

    variable_declaration: $ => seq(
      choice('let', 'var', 'const'),
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
    ),

    return_statement: $ => prec.right(seq(
      'return',
      optional($._expression),
    )),

    break_statement: $ => prec.right(seq(
      'break',
      optional($._expression),
    )),

    continue_statement: $ => 'continue',

    // While statement
    while_statement: $ => seq(
      'while',
      choice(
        field('condition', $._expression),
        seq('let', field('pattern', $._pattern), '=', field('value', $._expression)),
      ),
      field('body', $.block),
    ),

    // For statement
    for_statement: $ => seq(
      'for',
      field('pattern', $._pattern),
      'in',
      field('iterable', $._expression),
      field('body', $.block),
    ),

    // Loop statement
    loop_statement: $ => seq(
      'loop',
      field('body', $.block),
    ),

    match_body: $ => seq(
      '{',
      repeat($.match_arm),
      '}',
    ),

    match_arm: $ => seq(
      field('pattern', $.match_pattern),
      optional(seq('if', field('guard', $._expression))),
      '=>',
      field('body', choice($._expression, $.block)),
      optional(','),
    ),

    match_pattern: $ => choice(
      $._pattern,
      seq($._pattern, repeat1(seq('|', $._pattern))),
    ),

    // Try statement
    try_statement: $ => seq(
      'try',
      field('body', $.block),
      repeat($.catch_clause),
      optional($.finally_clause),
    ),

    catch_clause: $ => seq(
      'catch',
      optional(seq($.type_identifier, optional(seq('as', $.identifier)))),
      field('body', $.block),
    ),

    finally_clause: $ => seq(
      'finally',
      field('body', $.block),
    ),

    // Spawn statement
    spawn_statement: $ => seq(
      'spawn',
      optional($.string_literal),
      field('body', $.block),
    ),

    // Select statement
    select_statement: $ => seq(
      'select',
      $.select_body,
    ),

    select_body: $ => seq(
      '{',
      repeat($.select_arm),
      '}',
    ),

    select_arm: $ => seq(
      choice(
        seq('recv', ':', field('binding', $.identifier), '=', $.receive_expression),
        seq('send', ':', field('channel', $._expression), '<-', field('value', $._expression)),
        'default',
      ),
      '=>',
      field('body', choice($._expression, $.block)),
      optional(','),
    ),

    // Block
    block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),

    // =========================================================================
    // EXPRESSIONS
    // =========================================================================

    _expression: $ => choice(
      $._literal,
      $.identifier,
      $.self_expression,
      $.super_expression,
      $.this_expression,
      $.group_expression,
      $.binary_expression,
      $.unary_expression,
      $.assignment_expression,
      $.compound_assignment_expression,
      $.call_expression,
      $.method_call_expression,
      $.member_expression,
      $.index_expression,
      $.array_expression,
      $.tuple_expression,
      $.map_expression,
      $.struct_expression,
      $.lambda_expression,
      $.if_expression,
      $.match_expression,
      $.range_expression,
      $.cast_expression,
      $.type_check_expression,
      $.try_expression,
      $.receive_expression,
      $.send_expression,
      $.optional_chain_expression,
      $.null_coalesce_expression,
      $.increment_expression,
      $.decrement_expression,
      $.new_expression,
      $.path_expression,
      $.generic_function,
    ),

    binary_expression: $ => choice(
      prec.left(PREC.OR, seq($._expression, '||', $._expression)),
      prec.left(PREC.AND, seq($._expression, '&&', $._expression)),
      prec.left(PREC.BIT_OR, seq($._expression, '|', $._expression)),
      prec.left(PREC.BIT_XOR, seq($._expression, '^', $._expression)),
      prec.left(PREC.BIT_AND, seq($._expression, '&', $._expression)),
      prec.left(PREC.EQUALITY, seq($._expression, choice('==', '!='), $._expression)),
      prec.left(PREC.COMPARISON, seq($._expression, choice('<', '>', '<=', '>='), $._expression)),
      prec.left(PREC.SHIFT, seq($._expression, choice('<<', '>>', '>>>'), $._expression)),
      prec.left(PREC.ADD, seq($._expression, choice('+', '-'), $._expression)),
      prec.left(PREC.MULTIPLY, seq($._expression, choice('*', '/', '%'), $._expression)),
      prec.right(PREC.POWER, seq($._expression, '**', $._expression)),
    ),

    unary_expression: $ => prec.right(PREC.UNARY, seq(
      choice('-', '!', '~'),
      $._expression,
    )),

    // Assignment
    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      field('left', choice($.identifier, $.member_expression, $.index_expression)),
      '=',
      field('right', $._expression),
    )),

    call_expression: $ => prec(PREC.CALL, seq(
      field('function', $._expression),
      field('arguments', $.arguments),
    )),

    arguments: $ => seq(
      '(',
      optional(seq(
        commaSep1($.argument),
        optional(','),
      )),
      ')',
    ),

    argument: $ => choice(
      $._expression,
      seq(field('name', $.identifier), ':', field('value', $._expression)),
      seq('...', $._expression),
    ),

    // Method call
    array_expression: $ => seq(
      '[',
      optional(seq(
        commaSep1($._expression),
        optional(','),
      )),
      ']',
    ),

    // Tuple literal
    tuple_expression: $ => seq(
      '(',
      seq(
        $._expression,
        ',',
        optional(seq(
          commaSep1($._expression),
          optional(','),
        )),
      ),
      ')',
    ),

    // Map literal
    map_expression: $ => seq(
      '{',
      optional(seq(
        commaSep1($.map_entry),
        optional(','),
      )),
      '}',
    ),

    struct_expression: $ => prec(PREC.CALL, seq(
      field('type', choice($.type_identifier, $.path_expression)),
      '{',
      optional(seq(
        commaSep1($.struct_field_initializer),
        optional(','),
      )),
      '}',
    )),

    struct_field_initializer: $ => choice(
      seq(field('name', $.identifier), ':', field('value', $._expression)),
      seq('..', $._expression),
      $.identifier,
    ),

    // Lambda expression
    lambda_expression: $ => seq(
      '|',
      optional(commaSep1($.lambda_parameter)),
      '|',
      optional(seq('->', $._type)),
      choice(
        field('body', $.block),
        field('body', $._expression),
      ),
    ),

    lambda_parameter: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
    ),

    // If expression
    if_expression: $ => prec.right(seq(
      'if',
      field('condition', $._expression),
      field('consequence', $.block),
      optional(seq('else', choice($.if_expression, $.block))),
    )),

    // Match expression
    match_expression: $ => seq(
      'match',
      field('value', $._expression),
      $.match_body,
    ),

    // Range expression
    range_expression: $ => choice(
      prec.left(PREC.RANGE, seq(field('start', $._expression), '..', field('end', $._expression))),
      prec.left(PREC.RANGE, seq(field('start', $._expression), '..=', field('end', $._expression))),
      prec.left(PREC.RANGE, seq(field('start', $._expression), '..')),
      prec.right(PREC.RANGE, seq('..', field('end', $._expression))),
      prec.right(PREC.RANGE, seq('..=', field('end', $._expression))),
      prec(PREC.RANGE, '..'),
    ),

    // Cast expression
    receive_expression: $ => prec.right(PREC.UNARY, seq(
      '<-',
      field('channel', $._expression),
    )),

    _pattern: $ => choice(
      $.identifier,
      $.wildcard_pattern,
      $._literal,
      $.tuple_pattern,
      $.struct_pattern,
      $.enum_pattern,
      $.range_pattern,
      $.binding_pattern,
      $.rest_pattern,
    ),

    wildcard_pattern: $ => '_',

    enum_pattern: $ => prec.left(seq(
      $.type_identifier,
      optional(seq(
        choice('.', '::'),
        $.identifier,
      )),
      optional(seq('(', commaSep($._pattern), ')')),
    )),

    _type: $ => choice(
      $.primitive_type,
      $.type_identifier,
      $.generic_type,
      $.array_type,
      $.tuple_type,
      $.function_type,
      $.optional_type,
      $.path_type,
      $.self_type,
    ),

    primitive_type: $ => choice(
      'int',
      'int8',
      'int16',
      'int32',
      'int64',
      'uint',
      'uint8',
      'uint16',
      'uint32',
      'uint64',
      'float',
      'float32',
      'float64',
      'bool',
      'string',
      'char',
      'void',
    ),

    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    generic_type: $ => prec(1, seq(
      $.type_identifier,
      $.type_arguments,
    )),

    type_arguments: $ => seq(
      '<',
      commaSep1($._type),
      optional(','),
      '>',
    ),

    array_type: $ => seq('[', $._type, ']'),

    tuple_type: $ => seq(
      '(',
      seq(
        $._type,
        ',',
        optional(seq(commaSep1($._type), optional(','))),
      ),
      ')',
    ),

    function_type: $ => prec.left(seq(
      'fn',
      '(',
      optional(commaSep1($._type)),
      ')',
      optional(seq('->', $._type)),
    )),

    optional_type: $ => prec.left(seq($._type, '?')),

    path_type: $ => seq(
      $.type_identifier,
      repeat1(seq('::', $.type_identifier)),
    ),

    type_parameters: $ => seq(
      '<',
      commaSep1($.type_parameter),
      optional(','),
      '>',
    ),

    type_parameter: $ => seq(
      field('name', $.type_identifier),
      optional(seq(':', commaSep1($.trait_bound, '+'))),
    ),

    trait_bound: $ => choice(
      $.type_identifier,
      $.generic_type,
      $.path_type,
    ),

    where_clause: $ => seq(
      'where',
      commaSep1($.where_predicate),
    ),

    where_predicate: $ => seq(
      $.type_identifier,
      ':',
      commaSep1($.trait_bound, '+'),
    ),

    // =========================================================================
    // LITERALS
    // =========================================================================

    integer_literal: $ => token(choice(
      // Decimal with optional suffix
      seq(
        /[0-9][0-9_]*/,
        optional(/[iu](8|16|32|64)?/),
      ),
      // Hexadecimal
      seq(
        /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
        optional(/[iu](8|16|32|64)?/),
      ),
      // Octal
      seq(
        /0[oO][0-7][0-7_]*/,
        optional(/[iu](8|16|32|64)?/),
      ),
      // Binary
      seq(
        /0[bB][01][01_]*/,
        optional(/[iu](8|16|32|64)?/),
      ),
    )),

    float_literal: $ => token(seq(
      choice(
        seq(/[0-9][0-9_]*/, '.', /[0-9][0-9_]*/),
        seq(/[0-9][0-9_]*/, /[eE][+-]?[0-9]+/),
        seq(/[0-9][0-9_]*/, '.', /[0-9][0-9_]*/, /[eE][+-]?[0-9]+/),
      ),
      optional(/f(32|64)?/),
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.escape_sequence,
        $.string_interpolation,
      )),
      '"',
    ),

    string_content: $ => token.immediate(prec(1, /[^"\\$]+/)),

    char_literal: $ => seq(
      "'",
      choice(
        /[^'\\]/,
        $.escape_sequence,
      ),
      "'",
    ),

    boolean_literal: $ => choice('true', 'false'),

    null_literal: $ => 'null',

    // =========================================================================
    // IDENTIFIERS AND COMMENTS
    // =========================================================================

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
